fixed horizontal scrolling by adding box-sizing on footer and header elements with 100% width

--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ header {
   padding: 1rem;
   background-color: rgb(64, 62, 62);
   width: 100%;
+  box-sizing: border-box;
 }
 header .nav-bar a {
   color: white;
@@ -11,6 +12,7 @@ header .nav-bar a {
   padding: 8px;
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1.3rem;
+  box-sizing: border-box;
 }
 header .nav-bar a:hover {
   color: orange;
@@ -28,6 +30,7 @@ footer {
   background-color: rgb(64, 62, 62);
   justify-content: center;
   width: 100%;
+  box-sizing: border-box;
 }
 
 i {
