--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -9,6 +9,8 @@ footer {
 	justify-content: center;
 
 	width: 100%;
+	box-sizing: border-box;
+	// height: 100px;
 }
 
 // social media icons
