--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -6,6 +6,7 @@ header {
 	padding: 1rem;
 	background-color: $background-secondary;
 	width: 100%;
+	box-sizing: border-box;
 
 	.nav-bar {
 		a {
@@ -14,6 +15,7 @@ header {
 			padding: 8px;
 			font-family: "Source Sans Pro", sans-serif;
 			font-size: 1.3rem;
+			box-sizing: border-box;
 		}
 
 		// .home-link {
